--- a/src/assets/scss/object/component/_button.scss
+++ b/src/assets/scss/object/component/_button.scss
@@ -430,6 +430,14 @@
 	position: relative;
 	background-color: #fff;
 	margin-top: 15px;
+	transition: 0.3s ease-in-out;
+
+	&:hover{
+		img{
+			right: 15px;
+		}
+	}
+
 	@include is-max(1000px){
 		margin-top:50px;
 		order: 4;
@@ -460,10 +468,11 @@
 	}
 
 	img {
-		width: 5px;
-		height: 10px;
+		width: 12px;
+		height: 12px;
 		position: absolute;
 		right: 20px;
+		transition: 0.3s ease-in-out;
 	}
 }
 
