--- a/src/assets/scss/object/project/_header.scss
+++ b/src/assets/scss/object/project/_header.scss
@@ -244,7 +244,7 @@
 			align-items: center;
 			padding-left: 50px;
 			padding-top: 30px;
-			padding-bottom: 30px;
+			padding-bottom: 0;
 
 			@include is-max(980px) {
 				padding-left: 20px;
