updated header and footer

--- a/src/assets/scss/object/project/_footer.scss
+++ b/src/assets/scss/object/project/_footer.scss
@@ -690,6 +690,19 @@
                 
                     .c-link {
 
+                        .ad-txt-sp{
+                            display: none;
+                            @include is-sp{
+                                display: inline-block;
+                            }
+                        }
+
+                        .cap-sp{
+                            @include is-sp{
+                                text-transform: uppercase;
+                            }
+                        }
+
                         @include is-sp {
                             display: flex;
                             justify-content: space-between;
