--- a/src/assets/scss/object/component/_case.scss
+++ b/src/assets/scss/object/component/_case.scss
@@ -6,6 +6,7 @@
 			letter-spacing: 0.18em;
 			line-height: 1;
 			padding: 15px 0 20px 0;
+			font-weight: 500;
 
 			@include font-line(30, 48);
 
@@ -180,6 +181,7 @@
 							font-family: century-gothic, sans-serif;
 							font-weight: 700;
 							padding-top: 20px;
+							letter-spacing: 0.26em;
 
 							@include font-line(11);
 						}
@@ -189,6 +191,7 @@
 							font-family: cross-platform-yu-gothic, sans-serif;
 							font-weight: 700;
 							padding-bottom: 10px;
+							letter-spacing: 0.2em;
 
 							@include font-line(12.5);
 						}
@@ -222,6 +225,7 @@
 							font-family: century-gothic, sans-serif;
 							font-weight: 700;
 							padding-top: 20px;
+							letter-spacing: 0.26em;
 
 							@include font-line(11);
 						}
@@ -231,6 +235,7 @@
 							font-family: cross-platform-yu-gothic, sans-serif;
 							font-weight: 700;
 							padding-bottom: 10px;
+							letter-spacing: 0.2em;
 
 							@include font-line(12.5);
 						}
@@ -259,9 +264,9 @@
 					&.ttl {
 						font-family: cross-platform-yu-gothic, sans-serif;
 						font-weight: 500;
-						letter-spacing: .2em;
+						letter-spacing: 0.2em;
 
-						@include font-line(13,26);
+						@include font-line(13, 26);
 
 						@include is-sp {
 							text-align: center;
@@ -277,7 +282,7 @@
 							padding: 25px 0;
 						}
 
-						@include font-line(30,48);
+						@include font-line(30, 48);
 
 						br {
 							@include is-sp {
@@ -293,7 +298,7 @@
 					&.desc {
 						font-family: cross-platform-yu-gothic, sans-serif;
 						font-weight: 500;
-						letter-spacing:0.07em;
+						letter-spacing: 0.07em;
 						text-align: justify;
 
 						@include font-line(13, 26);
@@ -413,11 +418,24 @@
 				letter-spacing: 0.2em;
 
 				@include is-sp {
-					letter-spacing: 0.1em !important
+					letter-spacing: 0.1em !important;
 				}
 
 				@include font-line(13);
 			}
 		}
 	}
+
+	&__btm--slant {
+		padding-bottom: 70px !important;
+		clip-path: polygon(0 0%, 100% 0, 100% 88%, 0% 100%) !important;
+		background: linear-gradient(to right, #003782, #0059b6);
+
+		.c-case--items__contents--row_2__txt {
+			color: #fff !important;
+		}
+			
+	}
+
+
 }
