--- a/src/assets/scss/object/component/_case.scss
+++ b/src/assets/scss/object/component/_case.scss
@@ -8,6 +8,14 @@
 			padding: 15px 0 20px 0;
 			font-weight: 500;
 
+			@include is-max(1025px) {
+				font-size: 2.5vw;
+			}
+
+			@include is-max(1000px) {
+				font-size: 2.7vw;
+			}
+
 			@include font-line(30, 48);
 
 			@include is-sp {
@@ -47,13 +55,37 @@
 	}
 
 	&--items {
-		position: relative;
+		.l-wrap {
+			position: relative;
+		}
+
 		@include is-sp {
 			padding-top: 100px;
 		}
 
 		.img_box {
 			text-align: center !important;
+
+			@include is-max(450px) {
+				padding: 3px !important;
+				width: 50px !important;
+				height: 50px !important;
+
+				&__txt {
+					height: 100% !important;
+				}
+
+				&__ttl {
+					font-size: 6.5px !important;
+					padding-top: 8px !important;
+				}
+
+				&__sub {
+					font-size: 7.5px !important;
+					padding-top: 3px !important;
+					padding-bottom: 0 !important;
+				}
+			}
 		}
 
 		.sp_p0 {
@@ -98,8 +130,6 @@
 				}
 			}
 
-			
-
 			.c-case--items__contents--row_2 {
 				@include is-sp {
 					padding: 25px 0 0 0;
@@ -121,7 +151,7 @@
 			position: relative;
 
 			@include is-sp {
-				padding: 0 0 75px 0;
+				padding: 0 0 0 0;
 			}
 
 			.bg_3 {
@@ -136,11 +166,13 @@
 				}
 			}
 
-			
-
 			&--row_1 {
 				width: 57.14%;
 				display: flex;
+
+				@include is-max(832px) {
+					width: 51.14%;
+				}
 
 				@include is-sp {
 					width: 100%;
@@ -245,8 +277,13 @@
 				width: calc(100% - 57.14%);
 				padding-left: 120px;
 
-				@include is-max(1000px) {
-					padding-left: 50px;
+				@include is-max(1100px) {
+					padding-left: 30px;
+				}
+
+				@include is-max(832px) {
+					width: calc(100% - 51.14%);
+					padding-left: 20px;
 				}
 
 				@include is-sp {
@@ -257,18 +294,20 @@
 
 				&__txt {
 					text-align: left;
-					
 
 					&.ttl {
 						font-family: cross-platform-yu-gothic, sans-serif;
 						font-weight: 500;
 						letter-spacing: 0.2em;
-						
-
 						@include font-line(13, 26);
 
 						@include is-sp {
 							text-align: center;
+							line-height: 1;
+						}
+
+						@include is-max(322px) {
+							font-size: 4vw !important;
 						}
 					}
 
@@ -278,7 +317,12 @@
 						padding: 0 0 15px 0;
 
 						@include is-sp {
-							padding: 25px 0;
+							padding: 21px 0 25px 0;
+							@include font-line(25);
+						}
+
+						@include is-max(322px) {
+							font-size: 7vw;
 						}
 
 						@include font-line(30, 48);
@@ -300,24 +344,27 @@
 						letter-spacing: 0.07em;
 						text-align: justify;
 
+						@include is-sp {
+							line-height: 22.5px;
+						}
+
 						@include font-line(13, 26);
 					}
 				}
 
 				.row2__txt--02 {
 					text-align: left;
-					
 
 					.ttl {
-						color: #2D2319;
+						color: #2d2319;
 					}
 
 					.sub {
-						color: #258ACF;
+						color: #258acf;
 					}
 
 					.desc {
-						color: #2D2319;
+						color: #2d2319;
 					}
 				}
 			}
@@ -333,6 +380,7 @@
 			@include is-sp {
 				top: -75px;
 				width: 38.67%;
+				display: none;
 			}
 		}
 
@@ -341,6 +389,7 @@
 			bottom: 15px;
 			right: 0;
 			width: 320px;
+			opacity: 0.2;
 
 			@include is-sp {
 				display: none;
@@ -364,10 +413,15 @@
 			padding-left: 20px;
 			border-left: 3px solid #258acf;
 
+			@include is-sp {
+				padding-left: 10px !important;
+			}
+
 			&__ttl {
 				color: $color-text04;
 				font-family: century-gothic, sans-serif;
 				font-weight: 700;
+				letter-spacing: 0.26em;
 				line-height: 1;
 
 				@include font-line(11);
@@ -379,7 +433,7 @@
 				font-weight: 700;
 				line-height: 1;
 				padding: 20px 0 30px 0;
-
+				letter-spacing: 0.3em;
 				@include font-line(20);
 			}
 
@@ -387,6 +441,11 @@
 				color: $color-text-default;
 				font-family: cross-platform-yu-gothic, sans-serif;
 				font-weight: 500;
+				letter-spacing: 0.2em;
+
+				@include is-max(374px) {
+					font-size: 3.4vw;
+				}
 
 				@include font-line(13);
 			}
@@ -421,7 +480,7 @@
 				font-family: yu-mincho-pr6n, sans-serif;
 				font-weight: 500 !important;
 				padding: 15px 0 25px 0;
-				letter-spacing: 0.45rem;
+				letter-spacing: 0.34em;
 
 				@include font-line(26);
 
@@ -449,6 +508,10 @@
 					letter-spacing: 0.1em !important;
 				}
 
+				@include is-max(374px) {
+					font-size: 3.4vw;
+				}
+
 				@include font-line(13);
 			}
 		}
@@ -459,6 +522,10 @@
 		clip-path: polygon(0 50px, 100% 0, 100% 88%, 0% 100%) !important;
 		background: linear-gradient(to right, #003782, #0059b6);
 		padding-top: 50px;
+
+		@include is-sp {
+			clip-path: polygon(0 43px, 100% 12px, 100% 94%, 0% 100%) !important;
+		}
 
 		.c-case--items__contents--row_2__txt {
 			color: #fff !important;
