--- a/src/assets/scss/object/component/_slider.scss
+++ b/src/assets/scss/object/component/_slider.scss
@@ -294,3 +294,12 @@
 		display: none;
 	}
 }
+
+.c-slider_img2 {
+	position: absolute;
+	bottom: 83px;
+	top: unset;
+	right: 10px;
+	z-index: -1;
+	width: auto !important;
+}
