changed: finished on case6, update on case7 and case8

--- a/src/assets/scss/object/component/_case.scss
+++ b/src/assets/scss/object/component/_case.scss
@@ -364,9 +364,9 @@
 							@include font-line(25);
 						}
 
-						@include is-max(322px) {
-							font-size: 7vw;
-						}
+						// @include is-max(322px) {
+						// 	font-size: 7vw;
+						// }
 
 						@include font-line(30, 48);
 
