--- a/src/assets/scss/object/component/_banner.scss
+++ b/src/assets/scss/object/component/_banner.scss
@@ -24,14 +24,26 @@
 		}
 
 		p {
+
+			&:first-child {
+				letter-spacing: 0.15em !important;
+				@include is-sp {
+					@include font-line(25);
+					letter-spacing: 0.075em !important;
+				}
+			}
+			
 			&:nth-child(2) {
 				@include font-line(13);
 				letter-spacing: 0.3em;
 				font-family: century-gothic, sans-serif;
 				font-weight: 700;
+				padding-top: 10px !important;
 
 				@include is-sp {
 					font-weight: 400 !important;
+					letter-spacing: 0.26em !important;
+					padding-top: 5px !important;
 				}
 			}
 		}
@@ -49,7 +61,7 @@
 
 		@include is-sp {
 			left: 0;
-			padding: 10px 6px 15px 30px;
+			padding: 10px 6px 6px 30px;
 			top: 28%;
 			background: linear-gradient(to right, #2579BF, #2593D5) !important;
 		}
@@ -57,8 +69,10 @@
 		p {
 
 			&:first-child {
+				letter-spacing: 0.15em !important;
 				@include is-sp {
 					@include font-line(25);
+					letter-spacing: 0.075em !important;
 				}
 			}
 
@@ -67,9 +81,12 @@
 				letter-spacing: 0.3em;
 				font-family: century-gothic, sans-serif;
 				font-weight: 700;
+				padding-top: 10px !important;
 
 				@include is-sp {
 					font-weight: 400 !important;
+					letter-spacing: 0.26em !important;
+					padding-top: 5px !important;
 				}
 			}
 		}
