--- a/src/assets/scss/pages/_case.scss
+++ b/src/assets/scss/pages/_case.scss
@@ -211,13 +211,21 @@
 	}
 }
 
+.case02 {
+	&__title {
+		@include is-sp {
+			font-size: 25px !important;
+		}
+	}
+}
+
 .case05 {
 	&__title {
 		font-size: 30px !important;
 
 		@include is-max(769px) {
 			font-size: 3.5vw !important;
-		}	
+		}
 
 		@include is-sp {
 			font-size: 25px !important;
@@ -230,7 +238,6 @@
 }
 
 .case06 {
-
 	@include is-sp {
 		.title_sm {
 			@include font-line(13.5);
@@ -268,7 +275,7 @@
 	&--sub1 {
 		@include is-max(377px) {
 			font-size: 6.2vw !important;
-		}	
+		}
 	}
 
 	&--sub2 {
@@ -277,7 +284,7 @@
 		}
 		@include is-max(377px) {
 			font-size: 5.8vw !important;
-		}	
+		}
 	}
 
 	&--sub3 {
@@ -298,7 +305,6 @@
 		}
 	}
 }
-
 
 .case08--sub {
 	@include is-max(322px) {
