--- a/src/assets/scss/object/component/_case.scss
+++ b/src/assets/scss/object/component/_case.scss
@@ -358,10 +358,12 @@
 						font-family: yu-mincho-pr6n, sans-serif;
 						font-weight: 500;
 						padding: 0 0 15px 0;
+						letter-spacing: 0.18em;
 
 						@include is-sp {
 							padding: 21px 0 25px 0;
 							@include font-line(25);
+							letter-spacing: unset;
 						}
 
 						// @include is-max(322px) {
@@ -384,7 +386,7 @@
 					&.desc {
 						font-family: cross-platform-yu-gothic, sans-serif;
 						font-weight: 500;
-						letter-spacing: 0.07em;
+						letter-spacing: 0.2em;
 						text-align: justify;
 
 						@include is-sp {
@@ -562,7 +564,7 @@
 
 	&__btm--slant {
 		padding-bottom: 70px !important;
-		clip-path: polygon(0 50px, 100% 0, 100% 88%, 0% 100%) !important;
+		clip-path: polygon(0 65px, 100% 0, 100% 86%, 0% 100%) !important;
 		background: linear-gradient(to right, #003782, #0059b6);
 		padding-top: 50px;
 
@@ -570,8 +572,20 @@
 			clip-path: polygon(0 43px, 100% 12px, 100% 94%, 0% 100%) !important;
 		}
 
+		.c-case--items__contents {
+			padding-top: 70px;
+
+			@include is-sp {
+				padding: 0;
+			}
+		}
+
 		.c-case--items__contents--row_2__txt {
 			color: #fff !important;
+		}
+
+		.bg_5 {
+			top: 30px;
 		}
 	}
 }
