update private policy page

--- a/src/assets/scss/object/component/_banner.scss
+++ b/src/assets/scss/object/component/_banner.scss
@@ -1,5 +1,5 @@
 .c-banner{
-		background: #72A3C8;
+		background: linear-gradient(to right, #2079bd, #1e91d2);
 		margin: 0 auto;
 		text-align: center;
 		margin-top: -1px;
