--- a/src/assets/scss/object/project/_header.scss
+++ b/src/assets/scss/object/project/_header.scss
@@ -1063,6 +1063,7 @@
 				font-family: cross-platform-yu-gothic, sans-serif;
 				font-weight: 500;
 				margin-left: 20px;
+				color: #258acf;
 			}
 		}
 
