--- a/src/assets/scss/object/project/_addons.scss
+++ b/src/assets/scss/object/project/_addons.scss
@@ -379,6 +379,7 @@
 }
 .p-cntct {
 	padding: 99px 0;
+	padding: 99px 0 20px 0;
 	// background-image: url(../image/page/access/contact-bg.png);
 	background-size: cover;
 	background-repeat: no-repeat;
