--- a/src/assets/scss/pages/_privacy-policy.scss
+++ b/src/assets/scss/pages/_privacy-policy.scss
@@ -1,14 +1,61 @@
 .pp {
+	position: relative;
+
+	.c-banner {
+		padding: 0 0 80px 0;
+		background: linear-gradient(to right, #2079bd, #1e91d2);
+
+		@include is-max(400px) {
+			padding: 0 0 95px 0;
+		}
+
+		&--ttl {
+			.br-sp {
+				display: none;
+
+				@include is-sp {
+					display: block;
+				}
+			}
+
+			p {
+				line-height: 1.45em;
+
+				&:nth-child(1) {
+					@include is-max(400px) {
+						font-size: 7vw;
+						;
+					}
+				}
+
+				&:nth-child(2) {
+					@include is-max(400px) {
+						font-size: 3vw;
+						;
+					}
+				}
+			}
+		}
+	}
+
 	&__section_1 {
-		background: linear-gradient(
-			90deg,
-			rgba(37, 121, 191, 1) 0%,
-			rgba(37, 147, 213, 1) 50%
-		);
-		padding-bottom: 100px;
+		// background: linear-gradient(to right, #003782, #0059b6);
+		// padding-bottom: 100px;
+
+		// @include is-sp {
+		// 	padding-bottom: 55px;
+		// }
+		background: linear-gradient(to right, #003782, #0059b6);
+		clip-path: polygon(0 2%, 100% 0%, 100% 101%, 0% 100%);
+		margin-top: -100px;
+		padding-bottom: 101px;
+		padding-top: 150px;
+
 
 		@include is-sp {
-			padding-bottom: 55px;
+			padding-bottom: 101px;
+			clip-path: polygon(0 80px, 100% 1%, 100% 101%, 0% 100%);
+			margin-top: -130px;
 		}
 
 		.l-wrap {
@@ -28,20 +75,21 @@
 		}
 	}
 
-	.bread_crumps{
-	  text-align: left;
-	  position: relative;
-	  z-index: 150;
-	  padding-top: 12px;
-		.txt{
+	.bread_crumps {
+		text-align: left;
+		position: relative;
+		z-index: 150;
+		padding-top: 12px;
+
+		.txt {
 			width: 90%;
 			margin: 0 auto;
 			max-width: 1100px;
 			color: #fff;
-			font-family:cross-platform-yu-gothic;
+			font-family: cross-platform-yu-gothic;
 		}
 
-		span{
+		span {
 			padding: 0 8px;
 		}
 	}
@@ -51,15 +99,16 @@
 		width: 800px;
 		height: 250px;
 		clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
-		background: linear-gradient(to left, #2593d5, #2579bf);
+		background: linear-gradient(to right, #003782, #0059b6);
 		position: absolute;
-		top: -4.5%;
+		top: 0;
 		right: 0%;
+		margin-top: -115px;
 
 		@include is-sp {
-			width: 83%;
-			height: 161px;
-			top: -30px;
+			width: 77%;
+			height: 322px;
+			top: 0;
 		}
 	}
 
@@ -75,21 +124,21 @@
 
 		@include font-line(13, 26);
 
-        br {
-            display: none;
-        }
+		br {
+			display: none;
+		}
 
-        br:nth-child(3) {
-            display: block;
-        }
+		br:nth-child(3) {
+			display: block;
+		}
 
 		@include is-sp {
 			letter-spacing: 0;
-            padding-top: 50px;
+			padding-top: 50px;
 
-            br {
-                display: block;
-            }
+			br {
+				display: block;
+			}
 		}
 
 		@include is-max(409px) {
@@ -97,7 +146,7 @@
 			padding-left: 10px;
 		}
 
-		
+
 	}
 
 	&__main-content {
@@ -134,6 +183,7 @@
 				padding: 0 0;
 			}
 
+
 			.left,
 			.right {
 				width: 47%;
@@ -145,6 +195,16 @@
 				.col {
 					padding-bottom: 60px;
 
+					.pad-left {
+						@include is-max(375px) {
+							padding: 0 15px 10px 0;
+						}
+					}
+
+					.p-l-30{
+						padding-left: 30px
+					}
+
 					&--ttl {
 						@include font-line(16, 26);
 						font-family: cross-platform-yu-gothic;
@@ -152,6 +212,7 @@
 						letter-spacing: 0.1em;
 						padding-bottom: 10px;
 						border-bottom: 1px solid #333;
+						color: #258acf;
 
 						@include is-sp {
 							padding: 0 20px 10px;
@@ -197,6 +258,10 @@
 							&--txt:nth-child(2) {
 								padding-top: 30px;
 							}
+
+							&--num {
+								color: #258acf;
+							}
 						}
 
 						&-info {
@@ -228,14 +293,14 @@
 					}
 				}
 
-                .col:last-child {
-                    padding-bottom: 0;
+				.col:last-child {
+					padding-bottom: 0;
 
-                    @include is-sp {
-                        padding-bottom: 60px !important;
-                    }
+					@include is-sp {
+						padding-bottom: 60px !important;
+					}
 
-                }
+				}
 			}
 
 			.right {
@@ -243,16 +308,16 @@
 				padding-left: 3%;
 				border-left: 1px solid #000;
 
-                @include is-sp {
-                    width: 100%;
-                    padding-left: 0;
-                    border-left: none;
-                }
+				@include is-sp {
+					width: 100%;
+					padding-left: 0;
+					border-left: none;
+				}
 
 				.col:last-child {
 					padding-bottom: 30px;
 				}
-                
+
 			}
 		}
 	}
@@ -260,7 +325,7 @@
 	// bg-img
 	&__bg_1 {
 		position: absolute;
-		top: -62px;
+		top: -48px;
 		right: 63px;
 		width: 316px;
 
@@ -287,7 +352,7 @@
 		-webkit-clip-path: polygon(100% 0%, 0 0, 0% 100%);
 		clip-path: polygon(100% 0%, 0 0, 0% 100%);
 		padding: 55px 0 0 0;
-		background: rgb(95, 165, 205);
+		background: linear-gradient(to right, #2079bd, #1e91d2);
 		text-align: center;
 		margin-top: -25px;
 
@@ -310,6 +375,7 @@
 	&--btn:first-child {
 		margin-right: 30px;
 	}
+
 	&--btn:last-child {
 		margin-left: 30px;
 	}
@@ -318,6 +384,7 @@
 		&--btn:first-child {
 			margin: 0;
 		}
+
 		&--btn:last-child {
 			margin: 25px 0 0 0;
 		}
