removed slash in mobile on header area

--- a/src/assets/scss/object/project/_header.scss
+++ b/src/assets/scss/object/project/_header.scss
@@ -382,6 +382,10 @@
 								font-family: cross-platform-yu-gothic, sans-serif;
 								color: #fff;
 								padding: 0 15px 0 10px;
+
+								@include is-sp{
+									content: "";
+								}
 							}
 						}
 						a {
