--- a/src/assets/scss/object/component/_case.scss
+++ b/src/assets/scss/object/component/_case.scss
@@ -342,6 +342,7 @@
 						font-weight: 500;
 						letter-spacing: 0.2em;
 						@include font-line(13, 26);
+						white-space: nowrap;
 
 						@include is-sp {
 							text-align: center;
