changed: finished QA on MAC (case-study3 corrections)

--- a/src/assets/scss/object/component/_case.scss
+++ b/src/assets/scss/object/component/_case.scss
@@ -392,6 +392,7 @@
 
 						@include is-sp {
 							line-height: 22.5px;
+							letter-spacing: 0.1em;
 						}
 
 						@include font-line(13, 26);
