--- a/src/assets/scss/pages/_case.scss
+++ b/src/assets/scss/pages/_case.scss
@@ -315,7 +315,7 @@
 			font-size: 24px !important;
 		}
 		@include is-max(401px) {
-			font-size: 24px !important;
+			font-size: 5.6vw !important;
 		}
 		@include is-max(377px) {
 			font-size: 5.8vw !important;
