edit width of input field sp

--- a/src/assets/scss/pages/_contact.scss
+++ b/src/assets/scss/pages/_contact.scss
@@ -284,6 +284,10 @@
 							width: 100%;
 							margin-bottom: 10px;
 
+							@include is-sp {
+								flex-wrap: wrap;
+							}
+
 							label {
 								width: 120px;
 
@@ -317,7 +321,6 @@
 									width: 100%;
 									margin-left: 0;
 									margin-top: 15px;
-									display: none;
 								}
 							}
 						}
