--- a/src/assets/scss/sections/_page-column.scss
+++ b/src/assets/scss/sections/_page-column.scss
@@ -1,4 +1,66 @@
 .column{
+    .jumbo_section{
+        padding-bottom: 60px;
+        .slider_wrapper{
+            padding: 20px 0;
+            background-color: #e7f4fb;
+            .slider_realestate{
+                position: relative;
+                .slick-track{
+                    .slick-slide{
+                        margin: 0 15px;
+                        img{
+                            width: 100%;
+                        }
+                    }
+                }
+                .slick-prev{
+                    left: 0;
+                    width: 50px;
+                    height: 50px;
+                    background-color: #e7f4fb;
+                    z-index: 60;
+                    &::before{
+                        content: "\2039";
+                        color: #4988c8;
+                        font-size: 40px;
+                        line-height: 0;
+                    }
+                }
+                .slick-next{
+                    right: 0; 
+                    width: 50px;
+                    height: 50px;
+                    background-color: #e7f4fb;
+                    z-index: 60;
+                    &::before{
+                        content: "\203A";
+                        color: #4988c8;
+                        font-size: 40px;
+                        line-height: 0;
+                    }
+                }
+                .slick-dots{
+                    li{
+                        margin: 0;
+                        button{
+                            &::before{
+                                font-size: 12px;
+                            }
+                        }
+                    }
+                    .slick-active{
+                        button{
+                            &::before{
+                                color: #0093ee;
+                                font-size: 12px;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
     .sect_2{
         .l-wrap{
             max-width: 1200px;
@@ -12,9 +74,11 @@
                 flex-wrap: wrap;
             }
             .left{
-                width: 66.36%;
-                @include is-sp{
+                width: calc(100% - 320px);
+                padding-right: 50px;
+                @include is-max(900px){
                     width: 100%;
+                    padding-right: 0;
                 }
 
                 .post-wrap{
@@ -88,6 +152,7 @@
                                 @include is-sp{
                                     @include font-line(11.5, 18.75);
                                     margin-bottom: 0;
+                                    font-weight: 500;
                                 }
                             }
 
@@ -140,9 +205,9 @@
                 }
             }
             .right{
-                width: 29.09%;
+                width: 320px;
 
-                @include is-sp{
+                @include is-max(900px){
                     width: 100%;
                 }
 
@@ -202,6 +267,108 @@
                                 margin-right: 3px;
                                 @include is-sp{
                                     margin-right: 4px;
+                                }
+                            }
+                        }
+                    }
+                }
+
+                .column-access-ranking{
+                    padding-top: 30px;
+                    padding-bottom: 20px;
+                    @include is-sp{
+                        padding-left: 0;
+                        padding-right: 0;
+                        padding-top: 20px;
+                        padding-bottom: 30px;
+                    }
+
+                    h3{
+                        @include font-line(16);
+                        font-family:cross-platform-yu-gothic, sans-serif;
+                        font-weight: 700;
+                        color: #0093ee;
+                        display: flex;
+                        align-items: center;
+                        margin-bottom: 30px;
+                        @include is-sp{
+                            @include font-line(17);
+                            padding-left: 17px;
+                            padding-right: 17px;
+                        }
+                        img{
+                            width: 39px;
+                            margin-right: 20px;
+                        }
+                    }
+                    .post_wrap{
+                        display: block;
+                        &_row{
+                            @include is-sp{
+                                padding-left: 17px;
+                                padding-right: 17px;
+                            }
+                            &:not(:last-child){
+                                border-bottom: 1px solid #c7c7c7;
+                                padding-bottom: 20px;
+                                margin-bottom: 20px;
+                            }
+                            .post{
+                                display: flex;
+                                figure{
+                                    width: 50%;
+                                }
+                                &_info{
+                                    width: 50%;
+                                    padding-left: 20px;
+                                    @include is-sp{
+                                        padding-left: 17px;
+                                    }
+                                    &_date{
+                                        font-family: century-gothic, sans-serif;
+                                        font-weight: 400;
+                                        @include font-line(10)
+                                    }
+                                    &_title{
+                                        font-family: cross-platform-yu-gothic, sans-serif;
+                                        font-weight: 500;
+                                        @include font-line(11, 22);
+                                        color: #0093ee;
+                                        padding: 3px 0 0;
+                                        @include is-sp{
+                                            @include font-line(11.5, 22);
+                                        }
+                                    }
+                                    .cat{
+                                        background-color: #0093ee;
+                                        color: #fff;
+                                        @include font-line(12);
+                                        font-family:cross-platform-yu-gothic;
+                                        font-weight: 500;
+                                        padding: 2px 10px 2px;
+                                        border-radius: 10px;
+                                        white-space: pre;
+                                        transition: .3s ease-in-out;
+                                        border: 1px solid #0093ee;
+                                        &-hash{
+                                            margin-right: 5px;
+                                        }
+                                        &:hover{
+                                            background-color: #fff;
+                                            color: #0093ee;
+                                        }
+                                        &:not(:last-child){
+                                            margin-right: 5px;
+    
+                                            @include is-sp{
+                                                margin-right: 0;
+                                            }
+                                        }
+                                        @include is-sp{
+                                            @include font-line(10);
+                                            padding: 2px 7px 2px;
+                                        }
+                                    }   
                                 }
                             }
                         }
